<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.anderson.cardapio.MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:freezesText="true"
                android:gravity="center"
                android:text="Cardápio"
                android:textAllCaps="true"
                android:textColor="@android:color/holo_red_dark"
                android:textIsSelectable="false"
                android:textSize="22sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioGroup
                    android:id="@+id/radiogroup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <RadioButton
                        android:id="@+id/rbcachorroQuente"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="3dp"
                        android:layout_weight="1"
                        android:text="@string/txtcchorroQuente" />

                    <RadioButton
                        android:id="@+id/rbbauruS"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="3dp"
                        android:layout_weight="1"
                        android:text="@string/txtbauruS" />

                    <RadioButton
                        android:id="@+id/rbbauruOvo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="3dp"
                        android:layout_weight="1"
                        android:text="@string/txtbauruOvo" />

                </RadioGroup>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:gravity="left"
                    android:orientation="vertical">

                    <EditText
                        android:id="@+id/edtcachorroQuente"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:editable="false"
                        android:ems="5"
                        android:text="R$ 3,50"
                        android:textSize="16sp" />

                    <EditText
                        android:id="@+id/edtbauruS"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:editable="false"
                        android:ems="5"
                        android:text="R$ 4,00"
                        android:textSize="16sp" />

                    <EditText
                        android:id="@+id/edtbauruOvo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:editable="false"
                        android:ems="5"
                        android:text="R$ 4,50"
                        android:textSize="16sp" />
                </LinearLayout>

                <Spinner
                    android:id="@+id/spinner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="top" />

            </LinearLayout>

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:src="@drawable/cachorroquente" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Nome do Cliente"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/edtnomeCliente"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="11"
                    android:inputType="textPersonName"
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:text="Quantidade"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/edtQuantidade"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="2"
                    android:inputType="number"
                    android:textSize="16sp" />

                <Button
                    android:id="@+id/btnIncluir"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:elevation="0dp"
                    android:gravity="center"
                    android:text="@string/txtIncluir"
                    android:textSize="16sp" />
            </LinearLayout>

            <!--<ListView-->
            <!--android:id="@+id/android:lstpedido"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="80dp"-->
            <!--android:scrollbars="vertical" />-->

            <ListView
                android:id="@+id/lista"
                android:layout_width="match_parent"
                android:layout_height="125dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Total"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/edtTotal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:editable="false"
                    android:ems="5"
                    android:inputType="none" />

                <CheckBox
                    android:id="@+id/cbComissao"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/txtComissao" />

                <Button
                    android:id="@+id/btnefetuarPag"
                    android:layout_width="130dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Pagamento" />

            </LinearLayout>

            <Button
                android:id="@+id/btnnovoCliente"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txtnovoCliente" />
        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>
